# P-P-Using-C-

./: CMakeLists.txt  task.cpp
Hello_world/: 1_HelloWorld.cpp  2_HelloWorld.cpp  CMakeLists.txt
Hello_world/1_HelloWorld/: CMakeLists.txt
Hello_world/2_HelloWorld/: CMakeLists.txt
Hello_world/3_HelloWorld/: 3_HelloWorld.cpp  CMakeLists.txt
ObjTypeValue/1_OTV/: OTV.cpp
ObjTypeValue/2_OTV/: OTV.cpp
ObjTypeValue/3_OTV/: OTV.cpp
ObjTypeValue/4_OTV/: OTV.cpp
ObjTypeValue/5_OTV/: OTV.cpp
ObjTypeValue/6_OTV/: OTV.cpp
ObjTypeValue/7_OTV/: CMakeLists.txt  OTV.cpp
ObjTypeValue/8_OTV/: OTV.cpp
Solving/2_Sol/: CMakeLists.txt
coursera/white_belt/1_week/: task.cpp
coursera/white_belt/1_week/task2/: CMakeLists.txt  task.cpp
coursera/white_belt/1_week/task3/: task.cpp
coursera/white_belt/1_week/task4/: task.cpp
coursera/white_belt/2_week/task3/: task.cpp
coursera/white_belt/2_week/task4/: task.cpp
coursera/white_belt/4_week/task1/: task.cpp
coursera/white_belt/4_week/task2/: task.cpp
