cmake_minimum_required(VERSION 3.10) 	 # Проверка версии CMake.
										 # Если версия установленой программы
										 # старее указаной, произойдёт аварийный выход.

add_executable(HelloWorld 3_HelloWorld.cpp)	 # Создает исполняемый файл с именем main
									 	 # из исходника 3_HelloWorld.cpp
